# get-through-it

./: README.md  pyproject.toml
src/gti/: __init__.py  ai.py  cli.py  config.py  display.py
src/gti/commands/: do.py  find.py  friend.py  note.py  open_notes.py  plan.py  pomo.py  setup.py  tasks.py  today.py  week.py  wrap.py
