[project]
name = "get-through-it"
version = "0.1.0"
description = "A dissertation productivity tool with a Claude-powered friend dude assistant"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "anthropic>=0.40",
]

[project.scripts]
gti = "gti.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gti"]
